Created Registration Form

--- a/FinalProject/templates/header.html
+++ b/FinalProject/templates/header.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="login.html">Login</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="register.html">Register</a>
+                        <a class="nav-link" href="/register">Register</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">Aboutus</a>
@@ -66,6 +66,6 @@
                       <button class="btn btn-warning" type="submit">Search</button>
                     </form> -->
                   </div>
-                <!-- </div> -->
+                </div>
             </nav>
         </div>
