--- a/FinalProject/templates/header.html
+++ b/FinalProject/templates/header.html
@@ -28,8 +28,12 @@
                       <li class="nav-item">
                         <a class="nav-link" href="home.html">Home</a>
                       </li>
+                      {% if user.is_authenticated %}
                       <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
+                        <a class="nav-link" href="/logout">Logout</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/register">Register</a>
