--- a/FinalProject/templates/header.html
+++ b/FinalProject/templates/header.html
@@ -32,12 +32,14 @@
                       <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                       </li>
+                      {% else %}
                       <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/register">Register</a>
                       </li>
+                      {% endif %}
                       <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">Aboutus</a>
                       </li>
