--- a/FinalProject/templates/index2.html
+++ b/FinalProject/templates/index2.html
@@ -17,7 +17,7 @@
           <br>
 
           <a href="/details/{{Pet.id}}" class="btn btn-primary">View Details</a>
-          <a href="#" class="btn btn-primary">Add to cart</a>
+          <a href="/addtocart/{{Pet.id}}" class="btn btn-primary">Add to cart</a>
       </div>
   </div>
   {% endfor %}
