--- a/FinalProject/templates/header.html
+++ b/FinalProject/templates/header.html
@@ -49,6 +49,9 @@
                       <li class="nav-item">
                         <a class="nav-link" href="details.html">Details</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="showCart.html">Cart</a>
+                      </li>
                       <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Dropdown
