--- a/FinalProject/templates/header.html
+++ b/FinalProject/templates/header.html
@@ -23,10 +23,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Navbar</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="home.html">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                       </li>
                       {% if user.is_authenticated %}
                       <li class="nav-item">
@@ -50,7 +47,7 @@
                         <a class="nav-link" href="details.html">Details</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="showCart.html">Cart</a>
+                        <a class="nav-link" href="/showCart">Cart</a>
                       </li>
                       <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
