--- a/FinalProject/templates/details.html
+++ b/FinalProject/templates/details.html
@@ -4,7 +4,7 @@
 {% block 'main' %}
 <div class="row mt-2">
     <div class="col-6">
-        <img src="{% static 'images/sig-sauer-p320-m18-new-guns-2019-f.jpg' %}" height="450" width="650" alt="">
+        <img src="{{ Pet.petimage.url }}" height="450" width="650" alt="">
     </div>
     <div class="col-6 ">
         <div class="card" style="width: 100%;">
@@ -15,7 +15,7 @@
                 <p class="card-text">Description : {{pets.description}}</p>
                 <strong>Rs.{{pets.price}} </strong>
                 <br>
-                <a href="#" class="btn btn-primary">Add to cart</a>
+                <a href="/updatecart/1/{{pet.id}}" class="btn btn-primary">Add to cart</a>
                 <a href="/" class="btn btn-primary">Back </a>
           </div>
         </div>    
