--- a/FinalProject/templates/header.html
+++ b/FinalProject/templates/header.html
@@ -27,6 +27,9 @@
                       </li>
                       {% if user.is_authenticated %}
                       <li class="nav-item">
+                        <a class="nav-link" href="/showCart">Cart</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                       </li>
                       {% else %}
@@ -44,10 +47,7 @@
                         <a class="nav-link" href="contact_us.html">Contactus</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="details.html">Details</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="/showCart">Cart</a>
+                        <a class="nav-link" href="">About Us</a>
                       </li>
                       <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
