--- a/FinalProject/templates/showCart.html
+++ b/FinalProject/templates/showCart.html
@@ -36,10 +36,10 @@
 </div>
 <div class="box col-4">
     <h3 class="bg-warning">Summary</h3>
-      <h4>Items Count: {{ count }}<strong>2</strong></h4>
+      <h4>Items Count: <strong>{{ count }}</strong></h4>
       <h4>Total Amount:Rs <strong>{{ total }}</strong></h4>
       <br>
-      <a class="btn btn-warning" href="/confirmorder.html">Confirm Order</a>
+      <a class="btn btn-warning" href="/confirmorder">Confirm Order</a>
       <a class="btn btn-warning" href = "/">Shop More</a>
 </div>
 {% endblock 'main' %}
