--- a/FinalProject/templates/confirmorder.html
+++ b/FinalProject/templates/confirmorder.html
@@ -26,7 +26,7 @@
          <h4>Items Count: {{count}}</h4>
          <h4>Total Amount: Rs. {{total}}</h4>
          <br>
-         <a class="btn btn-warning" href="/payment">Make Payment</a>
+         <a class="btn btn-warning" href="/makepayment">Make Payment</a>
          <a class="btn btn-warning" href="/showcart">Back To cart</a>
       </h3>
    </div>
