--- a/FinalProject/templates/pay.html
+++ b/FinalProject/templates/pay.html
@@ -1,7 +1,7 @@
 {% include 'header.html' %}
 {% load static %}
 
-{% block main %}
+{% block 'main' %}
 
 <button class="btn btn-warning" id="rzp-button1">Pay with Razorpay</button>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
